fix align

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,7 @@
     display: inline-block;
     border:1px solid #818181;
     margin-top: 1%;
+    text-justify: none;
 }
 
 .small_box {
